--- a/OpticalValleyUnite/Classes/UI/KnowledgeLibrary/ViewController/YQStartExamDetailVC.xib
+++ b/OpticalValleyUnite/Classes/UI/KnowledgeLibrary/ViewController/YQStartExamDetailVC.xib
@@ -14,9 +14,13 @@
                 <outlet property="bottomView" destination="gVS-gD-JRp" id="910-bG-Wed"/>
                 <outlet property="bottomViewHeightConstraint" destination="Tmu-kV-Vpu" id="zlG-7i-CdR"/>
                 <outlet property="handOverBtn" destination="lSI-3T-yMM" id="QKt-HL-Ey0"/>
+                <outlet property="headViewConstraint" destination="7ut-Mz-41P" id="pwJ-ba-tGo"/>
                 <outlet property="nextBtn" destination="TAn-A2-ElU" id="foD-4i-YQL"/>
                 <outlet property="questionView" destination="bE4-Xa-UmE" id="csx-ZO-tTJ"/>
                 <outlet property="scrollContentView" destination="vcP-bP-20m" id="VdN-nJ-wdF"/>
+                <outlet property="showImageV" destination="RmO-jq-xfT" id="GLr-dD-Zii"/>
+                <outlet property="stemLabel" destination="sTE-8B-DmV" id="ITl-vZ-CQq"/>
+                <outlet property="typeLabel" destination="IUh-zr-Wfb" id="mNT-8a-qll"/>
                 <outlet property="upBtn" destination="W6o-0F-qYu" id="7mI-mv-vD8"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
@@ -34,9 +38,37 @@
                             <subviews>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bE4-Xa-UmE">
                                     <rect key="frame" x="0.0" y="0.0" width="374" height="260"/>
+                                    <subviews>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sTE-8B-DmV">
+                                            <rect key="frame" x="10" y="5" width="354" height="21"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="RmO-jq-xfT" customClass="ShowImageView" customModule="OpticalValleyUnite" customModuleProvider="target">
+                                            <rect key="frame" x="10" y="57" width="354" height="193"/>
+                                            <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        </view>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IUh-zr-Wfb">
+                                            <rect key="frame" x="10" y="34" width="37.5" height="18"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                            <color key="textColor" red="0.60000002379999995" green="0.60000002379999995" blue="0.60000002379999995" alpha="1" colorSpace="calibratedRGB"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
                                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                     <constraints>
                                         <constraint firstAttribute="height" constant="260" id="7ut-Mz-41P"/>
+                                        <constraint firstItem="IUh-zr-Wfb" firstAttribute="leading" secondItem="bE4-Xa-UmE" secondAttribute="leading" constant="10" id="ARF-OO-HqT"/>
+                                        <constraint firstAttribute="trailing" secondItem="RmO-jq-xfT" secondAttribute="trailing" constant="10" id="Edv-nb-yOb"/>
+                                        <constraint firstItem="IUh-zr-Wfb" firstAttribute="leading" secondItem="sTE-8B-DmV" secondAttribute="leading" id="KtD-4S-Jf6"/>
+                                        <constraint firstAttribute="trailing" secondItem="sTE-8B-DmV" secondAttribute="trailing" constant="10" id="Xxt-eZ-ykf"/>
+                                        <constraint firstItem="RmO-jq-xfT" firstAttribute="leading" secondItem="bE4-Xa-UmE" secondAttribute="leading" constant="10" id="dGX-Or-ikR"/>
+                                        <constraint firstItem="RmO-jq-xfT" firstAttribute="top" secondItem="IUh-zr-Wfb" secondAttribute="bottom" constant="5" id="l4R-YT-C89"/>
+                                        <constraint firstAttribute="bottom" secondItem="RmO-jq-xfT" secondAttribute="bottom" constant="10" id="nXR-tF-kKv"/>
+                                        <constraint firstItem="IUh-zr-Wfb" firstAttribute="top" secondItem="sTE-8B-DmV" secondAttribute="bottom" constant="8" id="q0h-a7-JMQ"/>
+                                        <constraint firstItem="sTE-8B-DmV" firstAttribute="top" secondItem="bE4-Xa-UmE" secondAttribute="top" constant="5" id="sml-IR-ijh"/>
+                                        <constraint firstItem="sTE-8B-DmV" firstAttribute="leading" secondItem="bE4-Xa-UmE" secondAttribute="leading" constant="10" id="tO5-ob-cpa"/>
                                     </constraints>
                                 </view>
                             </subviews>
@@ -115,7 +147,7 @@
                 <constraint firstItem="jGg-76-NSa" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="jVt-C8-QrV"/>
                 <constraint firstAttribute="trailing" secondItem="jGg-76-NSa" secondAttribute="trailing" id="mVd-1q-uzT"/>
             </constraints>
-            <point key="canvasLocation" x="-171" y="69"/>
+            <point key="canvasLocation" x="277" y="77"/>
         </view>
     </objects>
 </document>
