--- a/OpticalValleyUnite/Classes/UI/KnowledgeLibrary/ViewController/YQCheckAchievementDetailVC.xib
+++ b/OpticalValleyUnite/Classes/UI/KnowledgeLibrary/ViewController/YQCheckAchievementDetailVC.xib
@@ -18,10 +18,16 @@
                 <outlet property="answerViewHeightConstraint" destination="u8x-Yl-cdQ" id="gnl-w5-uog"/>
                 <outlet property="bottomHightConstraint" destination="Epe-28-xp5" id="kV5-lD-l4e"/>
                 <outlet property="headView" destination="w7Q-1G-NxK" id="gV4-T0-Q8i"/>
+                <outlet property="headViewConstraint" destination="ytV-cW-sy2" id="iQD-Si-rAQ"/>
                 <outlet property="nextBtn" destination="iI8-F4-tp8" id="Tv6-Cl-aSw"/>
                 <outlet property="returnBtn" destination="Tsn-vL-Say" id="a2g-WY-YTW"/>
+                <outlet property="rightAnswerLabel" destination="Awf-ig-ax7" id="xzh-uj-erL"/>
                 <outlet property="scrollContentHightConstraint" destination="VbC-TC-RAR" id="Hv3-5t-Pld"/>
                 <outlet property="scrollContentView" destination="wDY-ew-HJD" id="Zr7-nI-CCo"/>
+                <outlet property="showImageV" destination="Ow3-rV-oPG" id="1hy-QQ-oSs"/>
+                <outlet property="showImageVConstraint" destination="NUi-r6-R2U" id="dm2-15-Bsb"/>
+                <outlet property="stemLabel" destination="ixV-gK-xhy" id="rEc-z0-Wda"/>
+                <outlet property="typeLabel" destination="bUb-IP-tXg" id="OPs-Bn-jkg"/>
                 <outlet property="upBtn" destination="t0M-Ga-sTF" id="qaF-eh-5Uy"/>
                 <outlet property="view" destination="9af-J2-4Ea" id="L5R-cb-AmU"/>
             </connections>
@@ -39,8 +45,51 @@
                             <subviews>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="w7Q-1G-NxK">
                                     <rect key="frame" x="0.0" y="0.0" width="374" height="260"/>
+                                    <subviews>
+                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="IUQ-Zc-XO8">
+                                            <rect key="frame" x="0.0" y="0.0" width="374" height="260"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ixV-gK-xhy">
+                                                    <rect key="frame" x="20" y="5" width="344" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Ow3-rV-oPG" customClass="ShowImageView" customModule="OpticalValleyUnite" customModuleProvider="target">
+                                                    <rect key="frame" x="20" y="57" width="344" height="193"/>
+                                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="193" id="NUi-r6-R2U"/>
+                                                    </constraints>
+                                                </view>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bUb-IP-tXg">
+                                                    <rect key="frame" x="20" y="34" width="37.5" height="18"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                                    <color key="textColor" red="0.60000002379999995" green="0.60000002379999995" blue="0.60000002379999995" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                            <constraints>
+                                                <constraint firstItem="ixV-gK-xhy" firstAttribute="leading" secondItem="IUQ-Zc-XO8" secondAttribute="leading" constant="20" id="5GH-fz-idj"/>
+                                                <constraint firstAttribute="height" priority="1" constant="260" id="7Lk-6z-I0c"/>
+                                                <constraint firstAttribute="trailing" secondItem="ixV-gK-xhy" secondAttribute="trailing" constant="10" id="8wX-ya-yuj"/>
+                                                <constraint firstAttribute="bottom" secondItem="Ow3-rV-oPG" secondAttribute="bottom" constant="10" id="bCN-hT-5fe"/>
+                                                <constraint firstItem="Ow3-rV-oPG" firstAttribute="top" secondItem="bUb-IP-tXg" secondAttribute="bottom" constant="5" id="cd9-4x-h65"/>
+                                                <constraint firstItem="Ow3-rV-oPG" firstAttribute="leading" secondItem="IUQ-Zc-XO8" secondAttribute="leading" constant="20" id="jVh-53-RrI"/>
+                                                <constraint firstAttribute="trailing" secondItem="Ow3-rV-oPG" secondAttribute="trailing" constant="10" id="jsm-s8-7fA"/>
+                                                <constraint firstItem="ixV-gK-xhy" firstAttribute="top" secondItem="IUQ-Zc-XO8" secondAttribute="top" constant="5" id="kup-3V-R7j"/>
+                                                <constraint firstItem="bUb-IP-tXg" firstAttribute="leading" secondItem="ixV-gK-xhy" secondAttribute="leading" id="reF-IP-eat"/>
+                                                <constraint firstItem="bUb-IP-tXg" firstAttribute="top" secondItem="ixV-gK-xhy" secondAttribute="bottom" constant="8" id="rmW-6F-Vjj"/>
+                                            </constraints>
+                                        </view>
+                                    </subviews>
                                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                     <constraints>
+                                        <constraint firstAttribute="bottom" secondItem="IUQ-Zc-XO8" secondAttribute="bottom" id="Gdr-Ek-4Ox"/>
+                                        <constraint firstItem="IUQ-Zc-XO8" firstAttribute="top" secondItem="w7Q-1G-NxK" secondAttribute="top" id="b4j-vv-qdh"/>
+                                        <constraint firstItem="IUQ-Zc-XO8" firstAttribute="leading" secondItem="w7Q-1G-NxK" secondAttribute="leading" id="f8z-eQ-cC0"/>
+                                        <constraint firstAttribute="trailing" secondItem="IUQ-Zc-XO8" secondAttribute="trailing" id="oSE-Zw-K3f"/>
                                         <constraint firstAttribute="height" constant="260" id="ytV-cW-sy2"/>
                                     </constraints>
                                 </view>
@@ -192,7 +241,7 @@
                 <constraint firstItem="wDY-ew-HJD" firstAttribute="centerX" secondItem="9af-J2-4Ea" secondAttribute="centerX" id="icB-6J-rCe"/>
                 <constraint firstAttribute="trailing" secondItem="Kvb-fs-2On" secondAttribute="trailing" id="pzU-vW-1mD"/>
             </constraints>
-            <point key="canvasLocation" x="-276.5" y="60.5"/>
+            <point key="canvasLocation" x="-534" y="25"/>
         </view>
     </objects>
 </document>
