--- a/OpticalValleyUnite/Classes/UI/PersonCore/ViewController/PersonCore.storyboard
+++ b/OpticalValleyUnite/Classes/UI/PersonCore/ViewController/PersonCore.storyboard
@@ -26,7 +26,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="riq-Aa-3da" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-247" y="761"/>
+            <point key="canvasLocation" x="-402" y="761"/>
         </scene>
         <!--Person Core View Controller-->
         <scene sceneID="fi2-ge-SqA">
@@ -279,7 +279,7 @@
                                                             <constraint firstAttribute="width" constant="40" id="wJZ-Ji-G2t"/>
                                                         </constraints>
                                                     </imageView>
-                                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icon_password" translatesAutoresizingMaskIntoConstraints="NO" id="oVY-9A-7R0">
+                                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icon_off-line" translatesAutoresizingMaskIntoConstraints="NO" id="oVY-9A-7R0">
                                                         <rect key="frame" x="12" y="9.5" width="25" height="25"/>
                                                         <constraints>
                                                             <constraint firstAttribute="height" constant="25" id="PpS-xq-jeH"/>
@@ -335,7 +335,7 @@
                                                             <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="40" id="oXP-uv-cLt"/>
                                                         </constraints>
                                                     </imageView>
-                                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icon_select_projects" translatesAutoresizingMaskIntoConstraints="NO" id="ORf-1E-WrN">
+                                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icon_mine_share" translatesAutoresizingMaskIntoConstraints="NO" id="ORf-1E-WrN">
                                                         <rect key="frame" x="12" y="9.5" width="25" height="25"/>
                                                         <constraints>
                                                             <constraint firstAttribute="width" constant="25" id="MVm-HJ-EOh"/>
@@ -365,14 +365,62 @@
                                                     <constraint firstItem="ORf-1E-WrN" firstAttribute="leading" secondItem="EUL-mJ-Wjk" secondAttribute="leading" constant="12" id="vrm-1U-pk1"/>
                                                 </constraints>
                                             </view>
+                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="nKP-CS-zbv">
+                                                <rect key="frame" x="0.0" y="320" width="374" height="44"/>
+                                                <subviews>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="语音开关" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Nha-mo-D8A">
+                                                        <rect key="frame" x="45" y="12.5" width="69.5" height="20.5"/>
+                                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                        <nil key="textColor"/>
+                                                        <nil key="highlightedColor"/>
+                                                    </label>
+                                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="larr" translatesAutoresizingMaskIntoConstraints="NO" id="6DH-KM-rGE">
+                                                        <rect key="frame" x="319" y="2" width="40" height="40"/>
+                                                        <constraints>
+                                                            <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="40" id="0bh-mK-adu"/>
+                                                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="40" id="J4y-Q4-chg"/>
+                                                            <constraint firstAttribute="height" constant="40" id="ULf-dM-aoC"/>
+                                                            <constraint firstAttribute="width" constant="40" id="Vke-Fj-sNy"/>
+                                                        </constraints>
+                                                    </imageView>
+                                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icon_Voice switch" translatesAutoresizingMaskIntoConstraints="NO" id="QfR-2B-riY">
+                                                        <rect key="frame" x="12" y="9.5" width="25" height="25"/>
+                                                        <constraints>
+                                                            <constraint firstAttribute="height" constant="25" id="Ta3-Ox-yoW"/>
+                                                            <constraint firstAttribute="width" constant="25" id="Ynm-BL-NRn"/>
+                                                        </constraints>
+                                                    </imageView>
+                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="XiD-A4-8IP">
+                                                        <rect key="frame" x="0.0" y="0.0" width="374" height="44"/>
+                                                        <connections>
+                                                            <action selector="shareButtonClick:" destination="GTU-aq-x3y" eventType="touchUpInside" id="GcR-Hl-pRz"/>
+                                                        </connections>
+                                                    </button>
+                                                </subviews>
+                                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                <gestureRecognizers/>
+                                                <constraints>
+                                                    <constraint firstAttribute="trailing" secondItem="XiD-A4-8IP" secondAttribute="trailing" id="2EV-0E-MoP"/>
+                                                    <constraint firstItem="QfR-2B-riY" firstAttribute="centerY" secondItem="nKP-CS-zbv" secondAttribute="centerY" id="3hF-fA-gDc"/>
+                                                    <constraint firstItem="Nha-mo-D8A" firstAttribute="centerY" secondItem="nKP-CS-zbv" secondAttribute="centerY" id="NqB-O2-2UG"/>
+                                                    <constraint firstItem="6DH-KM-rGE" firstAttribute="centerY" secondItem="nKP-CS-zbv" secondAttribute="centerY" id="Oih-Rl-fSV"/>
+                                                    <constraint firstAttribute="trailing" secondItem="6DH-KM-rGE" secondAttribute="trailing" constant="15" id="cHh-ah-OZt"/>
+                                                    <constraint firstAttribute="height" constant="44" id="ceT-XT-bZg"/>
+                                                    <constraint firstItem="XiD-A4-8IP" firstAttribute="leading" secondItem="nKP-CS-zbv" secondAttribute="leading" id="fXY-AE-Qiz"/>
+                                                    <constraint firstItem="QfR-2B-riY" firstAttribute="leading" secondItem="nKP-CS-zbv" secondAttribute="leading" constant="12" id="h9D-9u-WHQ"/>
+                                                    <constraint firstItem="Nha-mo-D8A" firstAttribute="leading" secondItem="nKP-CS-zbv" secondAttribute="leading" constant="45" id="jwa-Ld-SYb"/>
+                                                    <constraint firstAttribute="bottom" secondItem="XiD-A4-8IP" secondAttribute="bottom" id="lnU-RD-KCv"/>
+                                                    <constraint firstItem="XiD-A4-8IP" firstAttribute="top" secondItem="nKP-CS-zbv" secondAttribute="top" id="s7c-Ye-DdO"/>
+                                                </constraints>
+                                            </view>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="版本号: 20180628" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xiD-60-gI4">
-                                                <rect key="frame" x="116.5" y="344" width="141" height="21"/>
+                                                <rect key="frame" x="116.5" y="389" width="141" height="21"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <color key="textColor" red="0.59993284940719604" green="0.60003870725631714" blue="0.5999261736869812" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zd7-xf-n4r">
-                                                <rect key="frame" x="87" y="380" width="200" height="40"/>
+                                                <rect key="frame" x="87" y="425" width="200" height="40"/>
                                                 <constraints>
                                                     <constraint firstAttribute="width" constant="200" id="9z0-37-KSU"/>
                                                     <constraint firstAttribute="height" constant="40" id="ePC-Db-kNF"/>
@@ -407,7 +455,7 @@
                                                 </connections>
                                             </button>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="正式版" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qpz-Vi-Xvw">
-                                                <rect key="frame" x="165" y="425" width="43" height="17"/>
+                                                <rect key="frame" x="165" y="470" width="43" height="17"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
@@ -431,16 +479,19 @@
                                             <constraint firstAttribute="trailing" secondItem="t2E-xR-dmq" secondAttribute="trailing" id="HsR-a1-oDY"/>
                                             <constraint firstAttribute="trailing" secondItem="kBF-LV-Tp6" secondAttribute="trailing" id="IQo-H0-2j3"/>
                                             <constraint firstAttribute="trailing" secondItem="Ll6-HV-QUM" secondAttribute="trailing" id="JXu-VT-cwh"/>
+                                            <constraint firstItem="nKP-CS-zbv" firstAttribute="leading" secondItem="Q2H-fw-ZRu" secondAttribute="leading" id="KWs-LW-th4"/>
                                             <constraint firstItem="zd7-xf-n4r" firstAttribute="centerX" secondItem="Q2H-fw-ZRu" secondAttribute="centerX" id="Khf-oa-84Z"/>
                                             <constraint firstItem="rwy-xP-mT0" firstAttribute="top" secondItem="kBF-LV-Tp6" secondAttribute="bottom" constant="1" id="Nhk-rh-Hmm"/>
-                                            <constraint firstItem="xiD-60-gI4" firstAttribute="top" secondItem="EUL-mJ-Wjk" secondAttribute="bottom" constant="25" id="Ok9-tb-aad"/>
                                             <constraint firstItem="kBF-LV-Tp6" firstAttribute="top" secondItem="t2E-xR-dmq" secondAttribute="bottom" constant="1" id="RGJ-w0-HW8"/>
                                             <constraint firstAttribute="trailing" secondItem="YhN-kq-U4F" secondAttribute="trailing" id="VaB-ow-rHV"/>
                                             <constraint firstItem="t2E-xR-dmq" firstAttribute="top" secondItem="VCy-eW-pxf" secondAttribute="bottom" constant="5" id="YlW-HE-fRf"/>
+                                            <constraint firstItem="nKP-CS-zbv" firstAttribute="top" secondItem="EUL-mJ-Wjk" secondAttribute="bottom" constant="1" id="ZBS-dd-oRf"/>
                                             <constraint firstItem="xiD-60-gI4" firstAttribute="centerX" secondItem="zd7-xf-n4r" secondAttribute="centerX" id="aoG-4z-Aup"/>
                                             <constraint firstItem="Ll6-HV-QUM" firstAttribute="leading" secondItem="Q2H-fw-ZRu" secondAttribute="leading" id="bLg-Vq-4Se"/>
                                             <constraint firstAttribute="bottom" secondItem="Ll6-HV-QUM" secondAttribute="bottom" constant="44" id="cr2-mK-37e"/>
+                                            <constraint firstAttribute="trailing" secondItem="nKP-CS-zbv" secondAttribute="trailing" id="eiJ-6G-L7T"/>
                                             <constraint firstAttribute="height" constant="600" id="fH8-Lj-Q9L"/>
+                                            <constraint firstItem="xiD-60-gI4" firstAttribute="top" secondItem="nKP-CS-zbv" secondAttribute="bottom" constant="25" id="gkw-EE-X9P"/>
                                             <constraint firstItem="qpz-Vi-Xvw" firstAttribute="top" secondItem="zd7-xf-n4r" secondAttribute="bottom" constant="5" id="iXG-6C-VGf"/>
                                             <constraint firstItem="EUL-mJ-Wjk" firstAttribute="top" secondItem="rwy-xP-mT0" secondAttribute="bottom" constant="1" id="jhs-0S-6II"/>
                                             <constraint firstItem="qpz-Vi-Xvw" firstAttribute="centerX" secondItem="zd7-xf-n4r" secondAttribute="centerX" id="k53-Ef-fcY"/>
@@ -489,7 +540,7 @@
                     </connections>
                 </tapGestureRecognizer>
             </objects>
-            <point key="canvasLocation" x="626" y="761"/>
+            <point key="canvasLocation" x="414" y="761"/>
         </scene>
         <!--我的统计-->
         <scene sceneID="3U1-0P-sJ6">
@@ -857,8 +908,11 @@
         <image name="5" width="75" height="15"/>
         <image name="Shape" width="17" height="18"/>
         <image name="bg" width="375" height="108"/>
-        <image name="icon_password" width="14" height="16"/>
-        <image name="icon_select_projects" width="15" height="14"/>
+        <image name="icon_Voice switch" width="18" height="18"/>
+        <image name="icon_mine_share" width="18" height="18"/>
+        <image name="icon_off-line" width="18" height="18"/>
+        <image name="icon_password" width="18" height="18"/>
+        <image name="icon_select_projects" width="18" height="18"/>
         <image name="larr" width="30" height="30"/>
         <image name="me_active" width="20" height="20"/>
         <image name="me_normal" width="20" height="20"/>
